--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
               <div class="overlay-search">
                 <div class="menu-search-test">
                   <button class="search-logo">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"
-                      class="Icon__StyledSVG-lm07h6-0 dHKzVM">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
+                      aria-hidden="true" class="Icon__StyledSVG-lm07h6-0 dHKzVM">
                       <path
                         d="M18 16.615c0 .375-.137.7-.412.973a1.331 1.331 0 01-.973.412 1.28 1.28 0 01-.973-.412l-3.71-3.7a7.41 7.41 0 01-4.317 1.342c-1.03 0-2.017-.2-2.958-.6a7.616 7.616 0 01-2.434-1.623 7.605 7.605 0 01-1.622-2.433A7.472 7.472 0 010 7.616c0-1.032.2-2.018.6-2.96a7.65 7.65 0 011.623-2.433A7.616 7.616 0 014.657.601 7.49 7.49 0 017.615 0c1.032 0 2.018.2 2.959.601.94.4 1.752.941 2.434 1.622a7.624 7.624 0 011.622 2.434c.4.941.601 1.927.601 2.959a7.403 7.403 0 01-1.342 4.316l3.71 3.71c.267.266.401.592.401.973m-5.539-9c0-1.334-.474-2.475-1.423-3.423C10.09 3.244 8.95 2.77 7.615 2.77c-1.333 0-2.475.474-3.423 1.422C3.243 5.14 2.77 6.28 2.77 7.616c0 1.334.474 2.475 1.423 3.423.948.949 2.09 1.422 3.423 1.422 1.335 0 2.475-.473 3.423-1.422.95-.948 1.423-2.09 1.423-3.423"
                         fill="currentColor" fill-rule="evenodd"></path>
@@ -373,16 +373,16 @@
                   </button>
                 </div>
                 <input type="text" placeholder="Search...">
-                <button class="close-search"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 17 17" aria-hidden="true"
-                class="icon-xbutton-mobile">
-                <path
-                  d="M10.377 8.142l5.953-5.954-2.234-2.234-5.954 5.954L2.188-.046-.046 2.188l5.954 5.954-5.954 5.954 2.234 2.234 5.954-5.953 5.954 5.953 2.234-2.234z"
-                  fill="currentColor" fill-rule="evenodd">
-                </path>
-              </svg>
+                <button class="close-search"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15"
+                    viewBox="0 0 17 17" aria-hidden="true" class="icon-xbutton-mobile">
+                    <path
+                      d="M10.377 8.142l5.953-5.954-2.234-2.234-5.954 5.954L2.188-.046-.046 2.188l5.954 5.954-5.954 5.954 2.234 2.234 5.954-5.953 5.954 5.953 2.234-2.234z"
+                      fill="currentColor" fill-rule="evenodd">
+                    </path>
+                  </svg>
                 </button>
               </div>
-              
+
 
               <div class="menu-search">
                 <button class="search-logo">
@@ -1351,52 +1351,35 @@
     <div class="cookie-popup">
       <div class="title-popup">
         <h2>
-          Preferenze per la privacy: i cookie sono nostri. Il controllo è
-          dell'utente.
+          Privacy preferences: Cookies are ours. Control belongs to the user.
         </h2>
       </div>
       <div class="p1">
         <p>
-          LEGO System A/S (e le terze parti elencate di seguito) impostano e
-          utilizzano cookie e tecnologie simili (“cookie”) su questo sito web
-          per offrire un’esperienza migliore e più user-friendly, per scopi
-          statistici e analitici e per fornire un marketing mirato e
-          pertinente. Ulteriori informazioni sulle categorie di cookie sono
-          riportate di seguito; utilizzare i pulsanti per decidere quali
-          categorie si desidera attivare.
+          LEGO System A/S (and the third parties listed below) set and use cookies and similar technologies ("cookies")
+          on this website to provide a better and more user-friendly experience, for statistical and analytical
+          purposes, and to provide targeted and relevant marketing. Further information on the categories of cookies is
+          provided below; use the buttons to decide which categories you would like to activate.
         </p>
       </div>
       <div class="p2">
         <p>
-          Facendo clic su "Solo necessari", verranno impostati solo i cookie
-          necessari per consentire il funzionamento del sito Web. Questi
-          cookie non possono essere disabilitati. Selezionando "Accetta tutti"
-          si impostano tutti i cookie. Questo ci consente di ottimizzare
-          l'esperienza dell'utente e di pubblicizzare i nostri prodotti e
-          servizi. In alternativa, è possibile selezionarne solo alcuni. È
-          sufficiente fare clic su "Impostazioni dei cookie" e usare i
-          pulsanti di attivazione/disattivazione per scegliere le categorie
-          preferite.
+          By clicking "Necessary only," only the cookies necessary to enable the functioning of the website will be set.
+          These cookies cannot be disabled. Selecting "Accept all" sets all cookies. This allows us to optimize user
+          experience and advertise our products and services. Alternatively, you can select only some. Simply click on
+          "Cookie settings" and use the activation/deactivation buttons to choose preferred categories.
         </p>
       </div>
       <div class="p3">
-        <p>
-          Ricordare che è sempre possibile revocare il proprio consenso o
-          modificare le impostazioni semplicemente premendo il tasto
-          “Impostazioni dei cookie” sul nostro sito. Per ulteriori
-          informazioni, vedere anche la nostra
-          <a href="#">Informativa sui cookie</a> e la nostra Informativa sulla
-          privacy Informativa sui cookie e
-          <a href="">Informativa sulla privacy.</a>
-        </p>
+        <p>Remember, it's always possible to revoke your consent or modify settings by simply clicking the "Cookie
+          settings" button on our website. For more information, please also see our <a href="#">Cookie Policy</a> and
+          our <a href="#">Privacy Policy</a>.</p>
       </div>
       <div class="p4">
         <p>
-          Si noti che in questo sito rispettiamo il Global Privacy Control
-          (GPC) per i cookie e quando viene rilevata l'impostazione GPC
-          escludiamo automaticamente tutti i cookie, eccetto i cookie
-          “Strettamente necessari”. Per ulteriori informazioni, visitare
-          globalprivacycontrol.org.
+          Please note that on this website, we respect the Global Privacy Control (GPC) for cookies, and when the GPC
+          setting is detected, we automatically exclude all cookies except for "Strictly Necessary" cookies. For more
+          information, please visit <a href="#">globalprivacycontrol.org</a>.
         </p>
       </div>
       <div class="buttons-cookie">
@@ -1405,24 +1388,11 @@
       </div>
 
       <div class="impostazioni-cookie">
-        <a href="">Impostazioni dei cookie</a>
+        <a href="">Cookie Settings</a>
       </div>
     </div>
   </div>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const cookieOverlay = document.querySelector(".cookie-overlay");
-      const acceptBtn = document.querySelector(".accept-cookie-btn");
-      const necessaryBtn = document.querySelector(".necessary-cookie-btn");
 
-      acceptBtn.addEventListener("click", () => {
-        cookieOverlay.style.display = "none";
-      });
-      necessaryBtn.addEventListener("click", () => {
-        cookieOverlay.style.display = "none";
-      });
-    });
-  </script>
   <script src="js/script.js"></script>
 </body>
 
