aggiunta sezione sidebar shop

--- a/index.html
+++ b/index.html
@@ -333,6 +333,58 @@
           </div>
         </div>
       </section>
+
+      <!--SIDEBAR MENU-->
+      <div class="overlay-sidebar"></div>
+      <div class="sidebar-hidden sidebar-shop">
+        <button class="x-button-sidebar sidebar-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width=17 heigth=17 viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+        </button>
+        <div class="sidebar-list-ctn">
+          <ul>
+            <li class="link-sidebar"><a href="#">Sets by theme</a>
+              <span>
+                <svg class="svg-link-sidebar"  xmlns="http://www.w3.org/2000/svg" width=18 height=28 viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+              </span>
+            </li>
+            <li class="link-sidebar"><a href="#">Ages</a>
+              <span>
+                <svg  class="svg-link-sidebar" xmlns="http://www.w3.org/2000/svg" width=18 height=28 viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+              </span>
+            </li>
+            <li class="link-sidebar"><a href="#">Price ranges</a>
+              <span>
+                <svg  class="svg-link-sidebar" xmlns="http://www.w3.org/2000/svg" width=18 height=28 viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+              </span>
+            </li>
+            <li class="link-sidebar"><a href="#">LEGO Merchandise</a>
+              <span>
+                <svg  class="svg-link-sidebar" xmlns="http://www.w3.org/2000/svg" width=18 height=28 viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+              </span>
+            </li>
+            <li class="link-sidebar"><a href="#">Interests</a>
+              <span>
+                <svg  class="svg-link-sidebar" xmlns="http://www.w3.org/2000/svg" width=18 height=28 viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+              </span>
+            </li>
+            <li class="link-sidebar"><a href="#">Pick and build</a>
+              <span>
+                <svg  class="svg-link-sidebar" xmlns="http://www.w3.org/2000/svg" width=18 height=28 viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+              </span>
+            </li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Exsclusives</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">New</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Bestsellers</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Home decor</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Offer & Sale</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Gift Cards</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Coming soon</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Find ispiration</a></li>
+            <li class="link-sidebar color-link-sidebar"><a href="#">Last chance to buy</a></li>
+          </ul>
+        </div>
+      </div>
+
       <section class="menu-container">
         <div class="menu">
           <div class="menu-logo-links">
@@ -353,7 +405,7 @@
                 </svg></a>
             </div>
             <div class="menu-links-cnt">
-              <a href="#" class="menu-link hover-underline shop-link">SHOP</a>
+              <a href="#" class="menu-link hover-underline shop-link"><button class="sidebar-btn btn-overlay">SHOP</button></a>
               <a href="#" class="menu-link hover-underline discover-link">DISCOVER</a>
               <a href="#" class="menu-link hover-underline help-link">HELP</a>
               <a href="#" class="menu-link mday-link">MARIO DAY</a>
