--- a/index.html
+++ b/index.html
@@ -275,27 +275,35 @@
               </svg>
               PLAY ZONE</a>
           </div>
-          <div class="mar10-button-lr">
-            <div class="l-btn-nav-controls">
-              <a class="l-btn-nav btn"><svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn"
-                  style="transform: scaleX(-1);">
-                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-                </svg></a>
+          <div class="custom-carousel">
+            <div class="custom-carousel-content">
+              <div class="custom-carousel-item">
+                <p>A gift for LEGO® Insiders with purchases of 200 € or more*</p>
+                <a href="">Learn more</a>
+              </div>
+              <div class="custom-carousel-item">
+                <p>A bundle gift with qualifying purchases of 50 € or more*</p>
+                <a href="">Learn more</a>
+              </div>
+              <div class="custom-carousel-item">
+                <p>LEGO® Star Wars™ Day returns 01/05-05/05</p>
+                <a href="">Learn more</a>
+              </div>
             </div>
-            <div class="mar10">
-              <span class="mar10-day-sale">MAR10 DAY *</span> <!--Modifichiamo questa parte (è insidioso)-->
-              <a href="#" class="mar10-shop-now">Learn more</a>
-            </div>
-            <div class="r-btn-nav-controls">
-              <a class="r-btn-nav btn"><svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
-                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-                </svg> </a>
-            </div>
+            <button class="custom-prev-btn">
+              <svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn"
+                style="transform: scaleX(-1);">
+                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+            </button>
+            <button class="custom-next-btn">
+              <svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+              </svg>
+            </button>
           </div>
+
           <div class="sign-in-box">
             <div class="sign-in">
               <!-- <div class="img-sign-in"> 
