--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                 </svg>
               </button>
             </div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" aria-hidden="true"
+              class="svg-quit" data-di-res-id="ecd48a7b-17cebc2e" data-di-rand="1713363401735">
+              <path
+                d="M10.377 8.142l5.953-5.954-2.234-2.234-5.954 5.954L2.188-.046-.046 2.188l5.954 5.954-5.954 5.954 2.234 2.234 5.954-5.953 5.954 5.953 2.234-2.234z"
+                fill="currentColor" fill-rule="evenodd"></path>
+            </svg>
             <div class="menu-yellow_head">
               <a href="#" class="sign-in-link-style"> <svg width="20" height="22" viewBox="0 0 20 22" aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
