--- a/index.html
+++ b/index.html
@@ -1248,11 +1248,26 @@
                 </div>
               </div>
             </div>
+            <div class="subscribe-footer2-2">
+              <h3>SUBSCRIBE TO DIGITAL MARKETING EMAILS</h3>
+              <div class="email-footer2">
+                <input type="email" placeholder="Your mail adress" class="email-input-f2" />
+                <button type="submit" class="email-button-f2">
+                  <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                    <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <hr class="hr-accordion">
             <div class="box2-footer2">
-              <div class="box2-ul">
+              <div class="box2-ul about-us">
                 <h3 class="accordion">ABOUT US</h3>
-                <ul class="li-f2 ">
+                <ul class="panel">
                   <li><a href="#" class="li-f2-link">About the LEGO Group</a></li>
+                  <hr class="hr-accordion">
                   <li><a href="#" class="li-f2-link">LEGO® news</a></li>
                   <li><a href="#" class="li-f2-link">Sustainability</a></li>
                   <li><a href="#" class="li-f2-link">Supply chain transparency statement</a></li>
@@ -1261,9 +1276,11 @@
                   <li><a href="#" class="li-f2-link">LEGO Compliance Line</a></li>
                 </ul>
               </div>
+
+              <hr class="hr-accordion">
               <div class="box2-ul">
                 <h3 class="accordion">SUPPORT</h3>
-                <ul class="li-f2 ">
+                <ul class="panel">
                   <li><a href="#" class="li-f2-link">Contact us</a></li>
                   <li><a href="#" class="li-f2-link">Find building instructions</a></li>
                   <li><a href="#" class="li-f2-link">Replacement parts</a></li>
@@ -1273,28 +1290,31 @@
                   <li><a href="#" class="li-f2-link">Product recalls</a></li>
                 </ul>
               </div>
-
-              <div class="box2-ul">
+              <hr class="hr-accordion">
+              <div class="box2-ul attractions">
                 <h3 class="accordion">ATTRACTIONS</h3>
-                <ul class="li-f2 ">
+                <ul class="panel">
                   <li><a href="#" class="li-f2-link">LEGO® House</a></li>
                   <li><a href="#" class="li-f2-link">LEGOLAND® Parks</a></li>
                   <li><a href="#" class="li-f2-link">LEGOLAND Discovery Centers</a></li>
                 </ul>
               </div>
+              <hr class="hr-accordion">
+              <div class="box2-ul more-from-us">
+                <h3 class="accordion">MORE FROM US</h3>
+                <ul class="panel">
+                  <li><a href="#" class="li-f2-link">LEGO® LIFE</a></li>
+                  <li><a href="#" class="li-f2-link">LEGO Education</a></li>
+                  <li><a href="#" class="li-f2-link">LEGO Ideas</a></li>
+                  <li><a href="#" class="li-f2-link">LEGO Foundation</a></li>
+                  <li><a href="#" class="li-f2-link">Affiliate Program</a></li>
+                  <li><a href="#" class="li-f2-link">Student Offers</a></li>
+                  <li><a href="#" class="li-f2-link">LEGO Braille Bricks</a></li>
+                </ul>
+              </div>
+              <hr class="hr-accordion">
             </div>
-            <div class="box2-ul">
-              <h3 class="accordion">MORE FROM US</h3>
-              <ul class="li-f2 ">
-                <li><a href="#" class="li-f2-link">LEGO® LIFE</a></li>
-                <li><a href="#" class="li-f2-link">LEGO Education</a></li>
-                <li><a href="#" class="li-f2-link">LEGO Ideas</a></li>
-                <li><a href="#" class="li-f2-link">LEGO Foundation</a></li>
-                <li><a href="#" class="li-f2-link">Affiliate Program</a></li>
-                <li><a href="#" class="li-f2-link">Student Offers</a></li>
-                <li><a href="#" class="li-f2-link">LEGO Braille Bricks</a></li>
-              </ul>
-            </div>
+            
           </div>
           </div>
           <div class="div2-footer2">
