--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,11 @@
             <hr class="hr-accordion">
             <div class="box2-footer2">
               <div class="box2-ul about-us">
-                <h3 class="accordion">ABOUT US</h3>
+                <h3 class="accordion">ABOUT US <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">About the LEGO Group</a></li>
                   <li><a href="#" class="li-f2-link">LEGO® news</a></li>
@@ -1278,7 +1282,11 @@
 
               <hr class="hr-accordion">
               <div class="box2-ul">
-                <h3 class="accordion">SUPPORT</h3>
+                <h3 class="accordion">SUPPORT <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">Contact us</a></li>
                   <li><a href="#" class="li-f2-link">Find building instructions</a></li>
@@ -1291,7 +1299,11 @@
               </div>
               <hr class="hr-accordion">
               <div class="box2-ul attractions">
-                <h3 class="accordion">ATTRACTIONS</h3>
+                <h3 class="accordion">ATTRACTIONS <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">LEGO® House</a></li>
                   <li><a href="#" class="li-f2-link">LEGOLAND® Parks</a></li>
@@ -1300,7 +1312,11 @@
               </div>
               <hr class="hr-accordion">
               <div class="box2-ul more-from-us">
-                <h3 class="accordion">MORE FROM US</h3>
+                <h3 class="accordion">MORE FROM US <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">LEGO® LIFE</a></li>
                   <li><a href="#" class="li-f2-link">LEGO Education</a></li>
