--- a/index.html
+++ b/index.html
@@ -1253,8 +1253,7 @@
               <div class="email-footer2">
                 <input type="email" placeholder="Your mail adress" class="email-input-f2" />
                 <button type="submit" class="email-button-f2">
-                  <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
+                  <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                     class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                     <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
                   </svg>
@@ -1264,11 +1263,11 @@
             <hr class="hr-accordion">
             <div class="box2-footer2">
               <div class="box2-ul about-us">
-                <h3 class="accordion">ABOUT US <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
-                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-                </svg></h3>
+                <h3 class="accordion acc1">ABOUT US <svg class="upArrow1" width="18" height="18" viewBox="0 0 18 28"
+                    aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                    <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                  </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">About the LEGO Group</a></li>
                   <li><a href="#" class="li-f2-link">LEGO® news</a></li>
@@ -1282,11 +1281,11 @@
 
               <hr class="hr-accordion">
               <div class="box2-ul">
-                <h3 class="accordion">SUPPORT <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
-                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-                </svg></h3>
+                <h3 class="accordion acc2">SUPPORT <svg class="upArrow2" width="18" height="18" viewBox="0 0 18 28"
+                    aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                    <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                  </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">Contact us</a></li>
                   <li><a href="#" class="li-f2-link">Find building instructions</a></li>
@@ -1299,11 +1298,11 @@
               </div>
               <hr class="hr-accordion">
               <div class="box2-ul attractions">
-                <h3 class="accordion">ATTRACTIONS <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
-                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-                </svg></h3>
+                <h3 class="accordion acc3">ATTRACTIONS <svg class="upArrow3" width="18" height="18" viewBox="0 0 18 28"
+                    aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                    <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                  </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">LEGO® House</a></li>
                   <li><a href="#" class="li-f2-link">LEGOLAND® Parks</a></li>
@@ -1312,11 +1311,11 @@
               </div>
               <hr class="hr-accordion">
               <div class="box2-ul more-from-us">
-                <h3 class="accordion">MORE FROM US <svg id="upArrow" width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
-                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-                </svg></h3>
+                <h3 class="accordion acc3">MORE FROM US <svg class="upArrow4" width="18" height="18" viewBox="0 0 18 28"
+                    aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                    <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                  </svg></h3>
                 <ul class="panel">
                   <li><a href="#" class="li-f2-link">LEGO® LIFE</a></li>
                   <li><a href="#" class="li-f2-link">LEGO Education</a></li>
@@ -1329,7 +1328,7 @@
               </div>
               <hr class="hr-accordion">
             </div>
-            
+
           </div>
           </div>
           <div class="div2-footer2">
