fixed conflicts on overlays and z-index (updated scripts)

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
               </div>
 
 
-              <div class="menu-search">
+              <div id="menu-search">
                 <button class="search-logo">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"
                     class="Icon__StyledSVG-lm07h6-0 dHKzVM">
