fixed accordion arrow

--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js" defer></script>
 </body>
 
 </html>
